--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Chanchal232.github.io/Homework",
+  "homepage": "http://Chanchal232.github.io/Homework",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
